--- a/bai tap/bai 4 - Thymeleaf/quan_ly_san_pham/src/main/webapp/WEB-INF/views/search.html
+++ b/bai tap/bai 4 - Thymeleaf/quan_ly_san_pham/src/main/webapp/WEB-INF/views/search.html
@@ -11,7 +11,7 @@
 </p>
 <p>
 <form action="/product/search" method="get">
-  <input type="text" name="keyword" placeholder="Nhập tên">
+  <input type="text" name="keyword" th:value="${keyword}">
   <button>Tìm kiếm</button>
 </form>
 </p>
