--- a/bai tap/bai 4 - Thymeleaf/quan_ly_san_pham/src/main/webapp/WEB-INF/views/index.html
+++ b/bai tap/bai 4 - Thymeleaf/quan_ly_san_pham/src/main/webapp/WEB-INF/views/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
 <h2>Danh sách sản phẩm</h2>
@@ -35,15 +37,39 @@
     <td th:text="${product.getManufacture()}"></td>
     <td><a th:href="@{/product/detail/{id}(id=${product.getId()})}"><button>Chi tiết</button></a></td>
     <td><a th:href="@{/product/edit/{id}(id=${product.getId()})}"><button>Sửa</button></a></td>
-    <td><button th:onclick="'confirmDelete(' + ${product.id} + ')'" th:text="Xóa"></button></td>
+    <td>
+      <button type="button" class="btn btn-sm btn-outline-danger" data-bs-toggle="modal"
+              data-bs-target="#deleteModal"
+              th:onclick="'deleteProduct(\''+${product.id}+'\',\''+${product.name}+'\')'">Delete
+      </button>
+    </td>
   </tr>
   </tbody>
 </table>
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form action="/product/delete" method="get">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="deleteModalLabel">Delete Product:</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          Are you sure want to delete <span id="name"></span>?
+          <input type="hidden" id="id" name="id">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 <script>
-  function confirmDelete(id) {
-    let result = confirm("Bạn có chắc chắn muốn xóa không?");
-    if (result) {
-      window.location.href = "/product/delete?id=" + id;}
+  function deleteProduct(id, name) {
+    document.getElementById("id").value=id;
+    document.getElementById("name").innerText=name;
   }
 </script>
 
